labs/241/01/errors.txt
1. javac Hi.java
Hi.java:1: error: class hi is public, should be declared in a file named hi.java
public class hi {

2. No errors, string parameter changed output

3. Hi.java:3: error: ')' expected
        System.out.println(Hello, world!");
                                       ^
Hi.java:3: error: unclosed string literal
        System.out.println(Hello, world!");
                                        ^
Hi.java:3: error: ';' expected
        System.out.println(Hello, world!");
                                           ^
Hi.java:6: error: reached end of file while parsing
}

4. Hi.java:3: error: unclosed string literal
        System.out.println("Hello, world!);
                           ^
Hi.java:3: error: ';' expected
        System.out.println("Hello, world!);
                                           ^
Hi.java:6: error: reached end of file while parsing
}

5. Error: Main method not found in class Hi, please define the main method as:
   public static void main(String[] args)
or a JavaFX application class must extend javafx.application.Application

6. Hi.java:3: error: cannot find symbol
        System.out.printline("Hello, world!");
                  ^
  symbol:   method printline(String)
  location: variable out of type PrintStream

7. Hi.java:3: error: ';' expected
        System.out.println("Hello, world!")

8. Hi.java:4: error: reached end of file while parsing
    }


